--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,7 +91,7 @@
                 <li>have to fight a battle more than once to win it</li>
                 <li>You can have your cake and lose weight, too!”</li>
               </ul>
-              <button class="btn-action"><a href="/newMeal">Get start</a></button>
+              <button class="button"><a href="/newMeal">Get start</a></button>
             </div>
         </div>
             <div class="column2">
@@ -103,7 +103,7 @@
                     <li>You have to do the work yourself</li>
                     <li>Think of your workouts as important meetings</li>
                   </ul>
-                  <button class="btn-action"><a href="/newExercise">Get start</a></button>
+                  <button class="button"><a href="/newExercise">Get start</a></button>
                 </div>
               </div>
           </div>
