--- a/views/pages/fitness/new.ejs
+++ b/views/pages/fitness/new.ejs
@@ -35,7 +35,7 @@
     <input type="radio" name="muscle" class="radio-input" value="pull" required>
     <label for="">pull machines</label>  
     <br>
-    <button type="submit" class="exercise-button"> Submit </button>
+    <button type="submit" class="button"> Submit </button>
 </fieldset>
     </form>
     
