--- a/views/pages/fitness/show.ejs
+++ b/views/pages/fitness/show.ejs
@@ -23,10 +23,10 @@
                 <li> Category:  </li>
                 <input type="text" name="catagory" value="<%= val.data.category %>">
                 <br>
-                <img class="machine-pic" src="<%= val.data.image ? val.data.image: 'https://cdn.improb.com/wp-content/uploads/2019/12/Marcy-Combo-Smith-Strength-Home-Gym-Machine-5276.jpg' %>" width="60%"  height="60%" alt="<%= val.data.name %> image" >
+                <img class="machine-pic" src="<%= val.data.image ? val.data.image: 'https://d3nuqriibqh3vw.cloudfront.net/media-vimeo/70533052.jpg' %>" width="60%"  height="60%" alt="<%= val.data.name %> image" >
                 <!-- <input type="text" name="url" value="<%= val.data.image %>"> -->
             </ul>
-            <button type="submit"  class="add-machine-button">Add to my Exercises</button>
+            <button type="submit"  class="button">Add to my Exercises</button>
         </form>
 
 
